@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.102 2007/10/02 18:28:15 dgp Exp $
+ * RCS: @(#) $Id: tk.h,v 1.103 2007/10/26 15:23:05 dgp Exp $
  */
 
 #ifndef _TK
@@ -53,10 +53,10 @@ extern "C" {
 #define TK_MAJOR_VERSION	8
 #define TK_MINOR_VERSION	5
 #define TK_RELEASE_LEVEL	TCL_BETA_RELEASE
-#define TK_RELEASE_SERIAL	1
+#define TK_RELEASE_SERIAL	2
 
 #define TK_VERSION		"8.5"
-#define TK_PATCH_LEVEL		"8.5b1.1"
+#define TK_PATCH_LEVEL		"8.5b2"
 
 /*
  * A special definition used to allow this header file to be included from
