@@ -1,3 +1,15 @@
+2007-10-26  Don Porter  <dgp@users.sourceforge.net>
+
+	* README:		Bump version number to 8.5b2.
+	* generic/tk.h:
+	* library/tk.tcl:
+	* unix/configure.in:
+	* unix/tk.spec:
+	* win/configure.in:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 2007-10-26  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXWm.c (ApplyMasterOverrideChanges): fix window class of
